[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/console.gd" type="Script" id=1]
[ext_resource path="res://src/views/console_view.gd" type="Script" id=2]
[ext_resource path="res://assets/custom_fonts/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[node name="console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console_view" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console_header" type="VBoxContainer" parent="console_view"]
margin_top = 50.0
margin_right = 40.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console_header_text" type="Label" parent="console_view/console_header"]
margin_right = 40.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )

[node name="console_content" type="VBoxContainer" parent="console_view"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console_text" type="RichTextLabel" parent="console_view/console_content"]
margin_right = 40.0
custom_fonts/normal_font = SubResource( 2 )

[node name="console_actions" type="HBoxContainer" parent="console_view"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console_quit_btn" type="Button" parent="console_view/console_actions"]
margin_right = 12.0
margin_bottom = 40.0

[node name="console_move_btn" type="Button" parent="console_view/console_actions"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 40.0
